<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/action_settings"
    android:icon="@drawable/ic_delete_white_24dp"
    tools:context=".Prefs">
    <CheckBoxPreference
        android:key="music"
        android:title="@string/music_title"
        android:summary="@string/music_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="save"
        android:title="@string/saving_results"
        android:summary="@string/saving_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="depth_rotation"
        android:title="Глубина ротации пазлов"
        android:summary="Устанавливает глубину ротации"
        android:defaultValue="1"
        android:entries="@array/depth_rotation"
        android:entryValues="@array/depth_rotation"
        android:dialogTitle="Выберите глубину ротации" />
</PreferenceScreen>