<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <TextView
        android:id="@+id/nameGamers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:paddingLeft="10dp"
        android:gravity="left"
        android:typeface="sans"/>
    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameGamers"
        android:text="@string/time_game"
        android:textSize="14dp"
        android:paddingLeft="10dp"
        android:gravity="right"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/time_gamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameGamers"
        android:layout_toRightOf="@+id/title1"
        android:textSize="14dp"
        android:gravity="right"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameGamers"
        android:layout_toRightOf="@+id/time_gamer"
        android:text="@string/step_game"
        android:textSize="14dp"
        android:gravity="right"
        android:paddingLeft="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/currentsteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameGamers"
        android:layout_toRightOf="@+id/title2"
        android:textSize="14dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameGamers"
        android:layout_toRightOf="@+id/currentsteps"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_level"
        android:id="@+id/title3"
        android:textSize="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:id="@+id/curent_level"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="10dp"/>

</RelativeLayout>